# StroboscopicCameraApp

./: CMakeLists.txt  cameracontroller.cpp  cameracontroller.h  camerawidget.cpp  camerawidget.h  cameraworker.cpp  cameraworker.h  liveviewwidget.cpp  liveviewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  strobewidget.cpp  strobewidget.h
